@@ -70,7 +70,7 @@ $version = "@VERSION@";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
               "redhat-7.2", "redhat-8.0", "redhat-9",
               
-              "mandrake-7.1", "mandrake-7.2",
+              "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1", 
               
               "debian-2.2", "debian-woody", "debian-sarge",
               
